# mimir

./: CMakeLists.txt  readme.txt
git/: counts.npy  data_gen_p.npy  main.py  min_max_L_and_VJ_dict.p  model.py  p_exp.npy  p_gen.npy  parse_data_file.py  read_data_file.py  read_gen_file.py
git/newdata/: yzh.txt.ymir_probs_aa.txt
old_model_python/: main.py  model.py  parse_data_file.py  read_data_file.py  read_gen_file.py
source/app/: app.cpp
source/selection/: selection_model.cpp  selection_model.h
